Fix dark mode styles

--- a/themes/creaturegames/static/css/style.css
+++ b/themes/creaturegames/static/css/style.css
@@ -129,10 +129,10 @@ hr {
 
 button, a.button {
   display: block;
-  background: color-mix(in srgb, var(--link), transparent 85%);
-  background: linear-gradient(to top, color-mix(in srgb, var(--link), var(--background-secondary) 40%), color-mix(in srgb, var(--link), var(--background-secondary) 50%));
+  background: color-mix(in srgb, var(--link), var(--background-primary) 80%);
+  /* background: linear-gradient(to top, color-mix(in srgb, var(--link), var(--background-secondary) 50%), color-mix(in srgb, var(--link), var(--background-primary) 60%)); */
   color: var(--link);
-  color: color-mix(in srgb, var(--link), var(--background-primary) 100%);
+  color: color-mix(in srgb, var(--link), var(--foreground-primary) 100%);
   padding: var(--spacing) calc(var(--spacing) * 1.5);
   border-radius: var(--border-radius);
   text-decoration: none;
@@ -143,19 +143,19 @@ button, a.button {
   font-family: 'Heebo', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: .05em;
-  outline: 1px solid var(--link);
+  outline: 1px solid transparent;
   transition: 300ms ease-out;
   margin: 0; /* resets default anchor styles */
-  box-shadow: 0 0.1rem 0.1rem color-mix(in srgb, var(--foreground-primary), transparent 95%);
+  box-shadow: 0 0.1rem 0.3rem #0001;
 
   &:is(:active, :hover, :focus) {
     transition: 60ms ease-out;
-    background: color-mix(in srgb, var(--link), transparent 70%);
-    background: linear-gradient(to top, color-mix(in srgb, var(--link), var(--background-secondary) 40%), color-mix(in srgb, var(--link), var(--background-secondary) 30%));
+    background: color-mix(in srgb, var(--link), var(--background-primary) 70%);
+    /* background: linear-gradient(to top, color-mix(in srgb, var(--link), var(--background-secondary) 50%), color-mix(in srgb, var(--link), var(--background-primary) 40%)); */
     color: color-mix(in srgb, var(--link), var(--foreground-secondary) 50%);
-    color: color-mix(in srgb, var(--link), var(--background-primary) 100%);
+    color: color-mix(in srgb, var(--link), var(--foreground-primary) 100%);
     outline-color: var(--link);
-    box-shadow: -0.1rem 0.2rem 0.3rem color-mix(in srgb, var(--foreground-primary), transparent 80%);
+    box-shadow: -0.1rem 0.2rem 0.5rem #0002;
   }
 }
 
